[package]
name = "authorized_keys"
version = "0.9.0"
authors = ["Liam Dawson <liam@ldaws.com>"]
edition = "2018"
description = "Parse and manipulate OpenSSH `authorized_keys` files"
homepage = "https://github.com/hubauth/authorized_keys"
repository = "https://github.com/hubauth/authorized_keys.git"
readme = "README.md"
keywords = ["openssh", "authorized_keys"]
categories = ["config", "parser-implementations"]
license = "MIT OR Apache-2.0"

[dependencies]
data-encoding = { version = "2.1", optional = true }

[features]
default = []
key_encoding = ['data-encoding']

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "parsing"
harness = false
